# Complete_ML_Pipeline_Project

./: .gitignore  Makefile  README.md  deployment.yaml  dvc.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: ci.yaml
data/interim/: test_processed.csv  train_processed.csv
docs/: mkdocs.yml
docs/docs/: index.md
flask_app/: app.py  requirements.txt
notebooks/: exp1.ipynb  exp2_bow_vs_tfidf.py  exp3_lor_bow_hp.py
scripts/: promote_model.py
src/data/: data_ingestion.py
src/model/: model_building.py  model_evaluation.py  register_model.py
tests/: test_model.py
